# coco

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.html  about.hbs  about.toml  codecov.yml  deny.toml  docker-compose.yaml  flake.nix
coco-channel/: Cargo.toml
coco-channel/src/: error.rs  lib.rs  message.rs  runtime.rs  scheduler.rs  telegram.rs
coco-cli/: Cargo.toml
coco-cli/src/: app.rs  cli.rs  env.rs  error.rs  lib.rs  logging.rs  main.rs  store.rs  tests.rs
coco-cli/src/app/: config.rs  daemon.rs  mod.rs  mq.rs  preset.rs  prompt.rs  runtime.rs  scheduler.rs  session.rs  skill.rs
coco-cli/src/cli/: daemon.rs  mod.rs  mq.rs  preset.rs  prompt.rs  scheduler.rs  session.rs  skill.rs  types.rs
coco-cli/tests/: socket_forwarding.rs
coco-console/: Cargo.toml  build.rs  web-graph-diesel.toml
coco-console/examples/: anchor_edge_lanes.rs
coco-console/migrations/00000000000001_initial_console_graph_schema/: down.sql  up.sql
coco-console/migrations/00000000000002_unique_dag_layout/: down.sql  up.sql
coco-console/migrations/00000000000003_materialization_generations/: down.sql  up.sql
coco-console/migrations/00000000000004_persistent_source_cache/: down.sql  up.sql
coco-console/migrations/00000000000005_adaptive_incremental_build/: down.sql  up.sql
coco-console/migrations/00000000000006_anchor_scope_provenance/: down.sql  up.sql
coco-console/migrations/00000000000007_materialized_shell_projection/: down.sql  up.sql
coco-console/migrations/00000000000008_resumable_source_refresh/: down.sql  up.sql
coco-console/migrations/00000000000009_resumable_dag_build/: down.sql  up.sql
coco-console/migrations/00000000000010_resumable_build_leases/: down.sql  up.sql
coco-console/migrations/00000000000011_incremental_parent_requirements/: down.sql  up.sql
coco-console/migrations/00000000000012_generation_source_revision/: down.sql  up.sql
coco-console/migrations/00000000000013_resumable_node_projection/: down.sql  up.sql
coco-console/migrations/00000000000014_resumable_branch_labels/: down.sql  up.sql
coco-console/migrations/00000000000015_dag_progress_counters/: down.sql  up.sql
coco-console/migrations/00000000000016_incremental_source_contributions/: down.sql  up.sql
coco-console/migrations/00000000000017_delta_graph_materialization/: down.sql  up.sql
coco-console/migrations/00000000000018_incremental_overlay_publication/: down.sql  up.sql
coco-console/migrations/00000000000019_durable_source_mutation_cursor/: down.sql  up.sql
coco-console/migrations/00000000000020_frozen_source_branch_history/: down.sql  up.sql
coco-console/migrations/00000000000021_bounded_delta_removal/: down.sql  up.sql
coco-console/migrations/00000000000022_bounded_dynamic_branch_scan/: down.sql  up.sql
coco-console/migrations/00000000000023_resumable_refresh_cleanup/: down.sql  up.sql
coco-console/src/: api.rs  client.rs  graph.rs  layout.rs  lib.rs  panels.rs  render.rs  schema.rs  server.rs  style.css  tests.rs  viewport.rs  web_graph.rs
coco-console/src/host/: api.rs  cache.rs  config.rs  error.rs  frontier.rs  graph.rs  incremental_build.rs  incremental_layout.rs  incremental_store.rs  layout.rs  publisher.rs  render.rs  server.rs  snapshot_store.rs  source_cache.rs  store.rs  style.css  tests.rs  v2_tests.rs  web_graph_order.rs  web_graph_runtime.rs  web_graph_store.rs  web_graph_view.rs
coco-console/src/native/: config.rs  error.rs  graph.rs  layout.rs  publisher.rs  render.rs  server.rs  store.rs  style.css  tests.rs
coco-console/src/wasm/: client.rs  refresh.rs  viewport.rs
coco-console/templates/: graph_shell.html
coco-console/tests/fixtures/: legacy_snapshot_materialization.sqlite3  stale_graph_materialization.sqlite3
coco-console/web-graph-migrations/00000000000001_initial/: down.sql  up.sql
coco-console/web-graph-migrations/00000000000002_viewport_spatial_index/: down.sql  up.sql
coco-console/web-graph-migrations/00000000000003_source_cursor/: down.sql  up.sql
coco-console/web-graph-migrations/00000000000004_layout_runtime_state/: down.sql  up.sql
coco-console/web-graph-migrations/00000000000005_layout_version/: down.sql  up.sql
coco-core/: Cargo.toml
coco-core/src/: engine.rs  error.rs  lib.rs  message.rs  resolver.rs  service.rs  skill.rs  tests.rs
coco-llm/: Cargo.toml
coco-llm/src/: bash_tool.rs  credential_proxy.rs  image_tool.rs  lib.rs  runtime_bridge.rs  skill.rs  skill_tool.rs  tool_definition.rs  unified_exec_tool.rs
coco-mem/: Cargo.toml
coco-mem/migrations/00000000000001_initial_store_schema/: down.sql  up.sql
coco-mem/migrations/00000000000002_node_relations/: down.sql  up.sql
coco-mem/migrations/00000000000003_node_kind/: down.sql  up.sql
coco-mem/migrations/00000000000004_session_job_summary/: down.sql  up.sql
coco-mem/migrations/00000000000005_node_metadata/: down.sql  up.sql
coco-mem/migrations/00000000000006_current_store_schema/: down.sql  up.sql
coco-mem/migrations/00000000000006_node_anchor_summary/: down.sql  up.sql
coco-mem/migrations/00000000000007_node_tool_item_tables/: down.sql  up.sql
coco-mem/migrations/00000000000008_drop_node_metadata_json/: down.sql  up.sql
coco-mem/migrations/00000000000009_drop_job_payload_json/: down.sql  up.sql
coco-mem/migrations/00000000000010_node_anchor_table/: down.sql  up.sql
coco-mem/migrations/00000000000011_node_content_column/: down.sql  up.sql
coco-mem/migrations/00000000000012_node_anchor_session/: down.sql  up.sql
coco-mem/migrations/00000000000013_node_anchor_session_patch/: down.sql  up.sql
coco-mem/migrations/00000000000014_node_anchor_prompt/: down.sql  up.sql
coco-mem/migrations/00000000000015_node_anchor_skill_invocation/: down.sql  up.sql
coco-mem/migrations/00000000000016_node_anchor_skill_result/: down.sql  up.sql
coco-mem/migrations/00000000000017_drop_node_anchor_kind_json/: down.sql  up.sql
coco-mem/migrations/00000000000018_node_kind_discriminator/: down.sql  up.sql
coco-mem/src/: error.rs  lib.rs  schema.rs  store.rs  types.rs
(+144 files in other folders)
