[workspace]
members = [
  "coco-channel",
  "coco-cli",
  "coco-console",
  "coco-core",
  "coco-llm",
  "coco-mem",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.40", features = ["derive", "env"] }
leptos = { version = "0.8.13", default-features = false, features = ["ssr"] }
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.9.0"
tokio = { version = "1.48.0", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
