[workspace]
members = [
  "coco-channel",
  "coco-cli",
  "coco-console",
  "coco-core",
  "coco-llm",
  "coco-mem",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# Async runtime and traits.
async-trait = "0.1.89"
tokio = { version = "1.52.1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }

# CLI and configuration.
clap = { version = "4.6.1", features = ["derive", "env"] }
toml = "1.1.2"

# Serialization.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Storage.
diesel = { version = "2.3.10", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
diesel-async = { version = "0.9.1", features = ["sqlite"] }
diesel_migrations = "2.3.0"
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }

# Error handling.
snafu = "0.9.1"

# Test support.
ctor = { version = "1.0.6", default-features = false, features = [
  "std",
  "proc_macro",
] }

# Observability.
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# UI.
leptos = { version = "0.8.13", default-features = false, features = ["ssr"] }

# Identifiers.
nanoid = "0.5.0"
