[package]
name = "coco-channel"
edition.workspace = true
version.workspace = true

[features]
default = []
telegram = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]

[dependencies]
async-trait.workspace = true
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
snafu.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
