[package]
name = "coco-channel"
edition.workspace = true
version.workspace = true

[features]
default = []
telegram = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]

[dependencies]
# Async abstractions.
async-trait.workspace = true

# Telegram transport.
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
], optional = true }
tokio = { workspace = true, optional = true }

# Serialization.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Error handling.
snafu.workspace = true

[dev-dependencies]
# Test runtime.
tokio.workspace = true
