[package]
name = "coco-channel"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
telegram = [
  "dep:reqwest",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
  "dep:tracing",
]

[dependencies]
# Async abstractions.
async-trait.workspace = true

# Telegram transport.
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
], optional = true }
tokio = { workspace = true, optional = true }

# Serialization.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Error handling.
snafu.workspace = true

# Observability.
tracing = { workspace = true, optional = true }

[dev-dependencies]
# Test initialization.
ctor.workspace = true

# Test runtime.
tokio.workspace = true

# Test logging.
tracing-subscriber.workspace = true
