[package]
name = "coco-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "coco"
path = "src/main.rs"

[dependencies]
# Workspace crates.
coco-channel = { path = "../coco-channel", features = ["telegram"] }
coco-core = { path = "../coco-core" }
coco-console = { path = "../coco-console" }
coco-llm = { path = "../coco-llm" }
coco-mem = { path = "../coco-mem" }

# Async runtime and traits.
async-trait.workspace = true
tokio.workspace = true

# CLI and configuration.
clap.workspace = true
toml.workspace = true

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Identifiers.
nanoid.workspace = true

# Hashing.
sha2 = "0.10.9"

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Test fixtures.
indoc = "2.0.6"
tempfile = "3.23.0"
