[package]
name = "coco-console"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Serialization shared by native and wasm builds.
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Workspace crates.
coco-mem = { path = "../coco-mem" }

# Native server runtime and UI rendering.
leptos.workspace = true
tokio.workspace = true

# Error handling.
snafu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Wasm bindings.
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "=0.4.67"

# Browser APIs.
web-sys = { version = "=0.3.94", features = [
  "console",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "EventTarget",
  "HtmlElement",
  "Location",
  "MouseEvent",
  "NodeList",
  "Response",
  "Storage",
  "Window",
] }

[build-dependencies]
# Build script error handling.
snafu.workspace = true
