[package]
name = "coco-console"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Serialization shared by host and wasm builds.
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Workspace crates.
async-trait.workspace = true
coco-mem = { path = "../coco-mem" }

# Host server runtime and UI rendering.
askama = "0.16.0"
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
] }
futures-util = "0.3.32"
leptos = { workspace = true, features = ["islands", "ssr"] }
tokio.workspace = true
tracing.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true

# Error handling.
snafu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Wasm bindings.
js-sys = "=0.3.94"
leptos = { workspace = true, features = ["hydrate", "islands"] }
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "=0.4.67"

# Browser APIs.
web-sys = { version = "=0.3.94", features = [
  "AbortController",
  "AbortSignal",
  "console",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "Event",
  "EventSource",
  "EventTarget",
  "HtmlElement",
  "History",
  "KeyboardEvent",
  "MessageEvent",
  "Location",
  "MouseEvent",
  "MouseEventInit",
  "Node",
  "NodeList",
  "RequestInit",
  "Response",
  "Storage",
  "WheelEvent",
  "Window",
] }

[build-dependencies]
# Build script error handling.
snafu.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Host server tests.
coco-mem = { path = "../coco-mem", features = ["test-utils"] }
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Browser-backed wasm tests.
wasm-bindgen-test = "=0.3.67"
