[package]
name = "coco-core"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
coco-channel = { path = "../coco-channel" }
coco-llm = { path = "../coco-llm" }
futures = "0.3.31"
indoc = "2.0.6"
jiff = { version = "0.2.23", features = ["serde"] }
nanoid.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
