[package]
name = "coco-core"
edition.workspace = true
version.workspace = true

[dependencies]
# Workspace crates.
coco-channel = { path = "../coco-channel" }
coco-llm = { path = "../coco-llm" }

# Async runtime and traits.
async-trait.workspace = true
backon.workspace = true
futures = "0.3.31"
tokio.workspace = true

# Time and identifiers.
jiff = { version = "0.2.28", features = ["serde"] }
nanoid.workspace = true

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true

# Test helpers.
indoc = "2.0.6"

[dev-dependencies]
# Test fixtures.
coco-mem = { path = "../coco-mem", features = ["test-utils"] }
tempfile = "3.20.0"
