[package]
name = "coco-llm"
edition.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
coco-mem = { path = "../coco-mem" }
indoc = "2.0.6"
nanoid = "0.4.0"
rig = { package = "rig-core", git = "https://github.com/0xPlaygrounds/rig", branch = "main", features = [
  "derive",
] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
