[package]
name = "coco-llm"
edition.workspace = true
version.workspace = true

[dependencies]
# Workspace crates.
coco-mem = { path = "../coco-mem" }

# Async runtime and traits.
async-trait.workspace = true
futures = "0.3.31"
portable-pty = "0.9.0"
tokio.workspace = true

# LLM backend.
rig = { package = "rig-core", git = "https://github.com/0xPlaygrounds/rig", branch = "main", features = [
  "derive",
] }

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true

# Identifiers and test helpers.
indoc = "2.0.6"
nanoid = "0.5.0"

[dev-dependencies]
# Test fixtures.
tempfile = "3.20.0"
