[package]
name = "coco-llm"
edition.workspace = true
version.workspace = true

[dependencies]
# Workspace crates.
coco-mem = { path = "../coco-mem" }

# Async runtime and traits.
async-trait.workspace = true
futures = "0.3.31"
portable-pty = "0.9.0"
tokio.workspace = true

# LLM backend.
rig = { package = "rig-core", version = "0.38.1", features = ["derive"] }

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true

# Identifiers and test helpers.
base64 = "0.22.1"
indoc = "2.0.6"
mime_guess = "2.0.5"
nanoid = "0.5.0"

[dev-dependencies]
# Test fixtures.
coco-mem = { path = "../coco-mem", features = ["test-utils"] }
tempfile = "3.20.0"
