[package]
name = "coco-mem"
edition.workspace = true
version.workspace = true

[dependencies]
# Time and identifiers.
jiff = { version = "0.2.28", features = ["serde"] }
nanoid.workspace = true

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Hashing and platform integration.
libc = "0.2.178"
sha2 = "0.10.9"

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true

[dev-dependencies]
# Test fixtures.
tempfile = "3.23.0"
