[package]
name = "coco-mem"
edition.workspace = true
version.workspace = true

[features]
# Test support.
test-utils = []

[dependencies]
# Storage.
async-trait.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
tokio.workspace = true

# Time and identifiers.
jiff = { version = "0.2.28", features = ["serde"] }
nanoid.workspace = true

# Serialization.
serde.workspace = true
serde_json.workspace = true

# Hashing.
sha2 = "0.11.0"

# Error handling.
snafu.workspace = true

# Observability.
tracing.workspace = true

[dev-dependencies]
# Test fixtures.
tempfile = "3.23.0"
